gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/protattr2.d
version https://git-lfs.github.com/spec/v1
oid sha256:94c036129cce74fb3170ed24f1396d8677532341a5986f5ea83239e155c1fb20
size 281
